test/module/bad-module-no-close.txt
;;; ERROR: 1
(module
(;; STDERR ;;;
module/bad-module-no-close.txt:3:8: syntax error, unexpected EOF, expecting ( or )
;;; STDERR ;;)
